[bdist_wheel]
universal=1

[metadata]
description-file = README.md
name = agoradesk_py
version = 0.1.0
author = marvin8
author_email = marvin8@tuta.io
url = https://codeberg.org/MarvinsCryptoTools/agoradesk_py
description = Python Interface for Agoradesk.com and LocalMonero.co API
keywords = Agoradesk LocalMonero info xmr monero api
license = AGPLv3+
classifiers =
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Operating System :: OS Independent
    License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)
    Intended Audience :: Developers
    Topic :: Office/Business :: Financial

[options]
packages =
    agoradesk_py
install_requires =
    arrow
    httpx
python_requires = >=3.6
package_dir =
    =src
zip_safe = no

[options.extras_require]
testing =
    pytest>=6.0
    pytest-cov>=2.0
    mypy>=0.910
    flake8>=3.9
    tox>=3.24

[options.package_data]
agoradesk_py = py.typed

[flake8]
max-line-length = 88
extend-ignore = E203
